fix pre overflow of pre tags

--- a/code/mysite/static/css/home.css
+++ b/code/mysite/static/css/home.css
@@ -69,3 +69,7 @@ body {
 .email-font {
   font-family: Roboto Mono;
 }
+
+pre {
+  overflow: scroll;
+}
